Added Version2 updates